--- a/ACM.vcxproj.filters
+++ b/ACM.vcxproj.filters
@@ -399,5 +399,8 @@
     <ClCompile Include="7569.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="10866.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
